// Copyright 2024 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.workloadidentity.v1;

import "google/protobuf/empty.proto";
import "teleport/workloadidentity/v1/resource.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/workloadidentity/v1;workloadidentityv1";

// WorkloadIdentityResourceService provides methods to manage the
// WorkloadIdentity resource.
service WorkloadIdentityResourceService {
  // CreateWorkloadIdentity creates a new workload identity, it will refuse to
  // create a workload identity if one already exists with the same name.
  rpc CreateWorkloadIdentity(CreateWorkloadIdentityRequest) returns (WorkloadIdentity);
  // UpdateWorkloadIdentity updates an existing workload identity, it will refuse
  // to update a workload identity if one does not already exist with the same name.
  //
  // ConditionalUpdate semantics are applied, e.g, the update will only succeed
  // if the revision of the provided WorkloadIdentity matches the revision of
  // the existing WorkloadIdentity.
  rpc UpdateWorkloadIdentity(UpdateWorkloadIdentityRequest) returns (WorkloadIdentity);
  // UpsertWorkloadIdentity creates or updates a workload identity. You should
  // prefer to call Create or Update.
  rpc UpsertWorkloadIdentity(UpsertWorkloadIdentityRequest) returns (WorkloadIdentity);
  // GetWorkloadIdentity retrieves a workload identity by name.
  rpc GetWorkloadIdentity(GetWorkloadIdentityRequest) returns (WorkloadIdentity);
  // DeleteWorkloadIdentity deletes a workload identity by name.
  rpc DeleteWorkloadIdentity(DeleteWorkloadIdentityRequest) returns (google.protobuf.Empty);
  // ListWorkloadIdentities of all workload identities, pagination semantics are
  // applied.
  rpc ListWorkloadIdentities(ListWorkloadIdentitiesRequest) returns (ListWorkloadIdentitiesResponse);
}

// The request for CreateWorkloadIdentity.
message CreateWorkloadIdentityRequest {
  // The workload identity to create.
  WorkloadIdentity workload_identity = 1;
}

// The request for UpdateWorkloadIdentity.
message UpdateWorkloadIdentityRequest {
  // The workload identity to update.
  WorkloadIdentity workload_identity = 1;
}

// The request for UpsertWorkloadIdentityRequest.
message UpsertWorkloadIdentityRequest {
  // The workload identity to upsert.
  WorkloadIdentity workload_identity = 1;
}

// The request for GetWorkloadIdentity.
message GetWorkloadIdentityRequest {
  // The name of the workload identity to retrieve.
  string name = 1;
}

// The request for DeleteWorkloadIdentity.
message DeleteWorkloadIdentityRequest {
  // The name of the workload identity to delete.
  string name = 1;
}

// The request for ListWorkloadIdentities.
message ListWorkloadIdentitiesRequest {
  // The maximum number of items to return.
  // The server may impose a different page size at its discretion.
  int32 page_size = 1;
  // The page_token value returned from a previous ListWorkloadIdentities request, if any.
  string page_token = 2;
}

// The response for ListWorkloadIdentities.
message ListWorkloadIdentitiesResponse {
  // The page of workload identities that matched the request.
  repeated WorkloadIdentity workload_identities = 1;
  // Token to retrieve the next page of results, or empty if there are no
  // more results in the list.
  string next_page_token = 2;
}
